<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FCFAF8">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="@dimen/_16sdp"
            android:layout_height="@dimen/_16sdp"
            android:layout_gravity="left"
            android:layout_marginLeft="12dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/ic_close" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/iv_close"
                android:layout_gravity="center"
                android:src="@drawable/ic_inapp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:text="@string/remove_ads"
                android:textColor="#643D58"
                android:textSize="30dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="12dp"
                android:text="@string/remove_all_anoying_ads_forever_by_just"
                android:textColor="#643D58"
                android:textSize="16dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <TextView
                    android:id="@+id/tv_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="0.0 $"
                    android:textColor="#F44336"
                    android:textSize="30dp"
                    android:textStyle="bold" />

                <View
                    android:id="@+id/view_split"
                    android:layout_width="1dp"
                    android:layout_height="50dp"
                    android:layout_margin="10dp"
                    android:background="#CCC" />

                <TextView
                    android:id="@+id/tv_old_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:alpha="0.7"
                    android:text="0.0 $"
                    android:textColor="#F44336"
                    android:textSize="24dp" />
            </LinearLayout>


            <TextView
                android:id="@+id/tv_pucharse"
                android:layout_width="@dimen/_150sdp"
                android:layout_height="@dimen/_45sdp"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:background="@drawable/bg_purcharse"
                android:gravity="center"
                android:text="@string/buy_now"
                android:textAllCaps="true"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/_20sdp" />
        </LinearLayout>
    </LinearLayout>

</androidx.core.widget.NestedScrollView>